--- a/weather.html
+++ b/weather.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/open-weather/2.0.0/openweather.min.js"></script>
     <link rel="stylesheet" href="./assets/style/style.css">
 </head>
 
@@ -18,7 +17,7 @@
             <nav class="nav flex-column">
                 <h3>Search for a City</h3>
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <input class="form-control me-2" id="search-box" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn" id="fetch-button"><i class="fa fa-search"></i></button>
                 </form>
 
@@ -54,11 +53,11 @@
             </nav>
         </div>
         <div class="div3" id="results"></div>
-        <div class="div4">Day 1</div>
-        <div class="div5">Day 2</div>
-        <div class="div6">Day 3</div>
-        <div class="div7">Day 4</div>
-        <div class="div8">Day 5</div>
+        <div class="dayGridBox" id="day0">Day 1</div>
+        <div class="dayGridBox" id="day1">Day 2</div>
+        <div class="dayGridBox" id="day2">Day 3</div>
+        <div class="dayGridBox" id="day3">Day 4</div>
+        <div class="dayGridBox" id="day4">Day 5</div>
     </div>
 
     <script src="./assets/script/script.js"></script>
